# django-tutorial

./: .gitignore  README.md  pyproject.toml  requirements.txt
mysite/: .dockerignore  .env.example  .env.prod.example  Dockerfile  Makefile  Procfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
mysite/mysite/: settings.py  urls.py
mysite/polls/: tests.py  views.py
