[project]
name = "django-tutorial"
version = "0.1.0"
description = "django-tutorial"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url==3.0.1",
    "django==5.2.6",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.1",
    "whitenoise==6.10.0",
]
